reading and importating of required module done

--- a/chatbot-about global-warming.ipynb
+++ b/chatbot-about global-warming.ipynb
@@ -1,6 +1,62 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importing the neccesary modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk\n",
+    "import numpy as np\n",
+    "import random\n",
+    "import string\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Readin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\owner\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     C:\\Users\\owner\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "file = open(\"climate.txt\", 'r', errors = 'ignore')\n",
+    "raw = file.read()\n",
+    "raw = raw.lower()\n",
+    "nltk.download('punkt')\n",
+    "nltk.download('wordnet')\n",
+    "sent_tokens = nltk.sent_tokenize(raw) # converts to list of sentences \n",
+    "word_tokens = nltk.word_tokenize(raw) # converts to list of words"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
