--- a/chatbot-about global-warming.ipynb
+++ b/chatbot-about global-warming.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,35 +25,142 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Readin"
+    "### Reading in the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = open(\"chatbot.txt\", 'r', errors = 'ignore')\n",
+    "raw = file.read()\n",
+    "raw = raw.lower()\n",
+    "nltk.download('punkt') # for sentence tokenization\n",
+    "nltk.download('wordnet') # lexical database for english language/dictionary for english language\n",
+    "sent_tokens = nltk.sent_tokenize(raw) # converts to list of sentences \n",
+    "word_tokens = nltk.word_tokenize(raw) # converts to list of words"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pre-processing the raw text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lemmer = nltk.stem.WordNetLemmatizer() # WordNet is a semantically-oriented dictionary of English included in NLTK.\n",
+    "\n",
+    "def LemTokens(tokens):\n",
+    "    return [lemmer.lemmatize(token) for token in tokens]\n",
+    "\n",
+    "remove_punct_dict = dict((ord(punct), None) for punct in string.punctuation)\n",
+    "\n",
+    "def LemNormalize(text):\n",
+    "    return LemTokens(nltk.word_tokenize(text.lower().translate(remove_punct_dict)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Keyword matching"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GREETING_INPUTS = (\"hello\", \"hi\", \"greetings\", \"sup\", \"what's up\",\"hey\",)\n",
+    "\n",
+    "GREETING_RESPONSES = [\"hi\", \"hey\", \"*nods*\", \"hi there\", \"hello\", \"I am glad! You are talking to me\"]\n",
+    "\n",
+    "def greeting(sentence): \n",
+    "    for word in sentence.split():\n",
+    "        if word.lower() in GREETING_INPUTS:\n",
+    "            return random.choice(GREETING_RESPONSES)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generating response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "\n",
+    "def response(user_response):\n",
+    "    robo_response=''\n",
+    "    sent_tokens.append(user_response)\n",
+    "    TfidfVec = TfidfVectorizer(tokenizer=LemNormalize, stop_words='english')\n",
+    "    tfidf = TfidfVec.fit_transform(sent_tokens)\n",
+    "    vals = cosine_similarity(tfidf[-1], tfidf)\n",
+    "    idx=vals.argsort()[0][-2]\n",
+    "    flat = vals.flatten()\n",
+    "    flat.sort()\n",
+    "    req_tfidf = flat[-2]\n",
+    "    if(req_tfidf==0):\n",
+    "        robo_response=robo_response+\"I am sorry! I don't understand you\"\n",
+    "        return robo_response\n",
+    "    else:\n",
+    "        robo_response = robo_response+sent_tokens[idx]\n",
+    "        return robo_response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\owner\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     C:\\Users\\owner\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n"
+      "ROBO: My name is Robo. I will answer your queries about Chatbots. If you want to exit, type Bye!\n",
+      "what is a chatbot?\n",
+      "ROBO: this sort of usage holds the prospect of moving chatbot technology from weizenbaum's \"shelf ... reserved for curios\" to that marked \"genuinely useful computational methods\".\n",
+      "bye\n",
+      "ROBO: Bye! take care..\n"
      ]
     }
    ],
    "source": [
-    "file = open(\"climate.txt\", 'r', errors = 'ignore')\n",
-    "raw = file.read()\n",
-    "raw = raw.lower()\n",
-    "nltk.download('punkt')\n",
-    "nltk.download('wordnet')\n",
-    "sent_tokens = nltk.sent_tokenize(raw) # converts to list of sentences \n",
-    "word_tokens = nltk.word_tokenize(raw) # converts to list of words"
+    "flag=True\n",
+    "print(\"ROBO: My name is Robo. I will answer your queries about Chatbots. If you want to exit, type Bye!\")\n",
+    "while(flag==True):\n",
+    "    user_response = input()\n",
+    "    user_response=user_response.lower()\n",
+    "    if(user_response!='bye'):\n",
+    "        if(user_response=='thanks' or user_response=='thank you' ):\n",
+    "            flag=False\n",
+    "            print(\"ROBO: You are welcome..\")\n",
+    "        else:\n",
+    "            if(greeting(user_response)!=None):\n",
+    "                print(\"ROBO: \"+greeting(user_response))\n",
+    "            else:\n",
+    "                print(\"ROBO: \",end=\"\")\n",
+    "                print(response(user_response))\n",
+    "                sent_tokens.remove(user_response)\n",
+    "    else:\n",
+    "        flag=False\n",
+    "        print(\"ROBO: Bye! take care..\")"
    ]
   },
   {
